# sotachain-v1

./: Cargo.toml  Makefile  README.md
docs/: keyword.md  useful-command.md
examples/flipper/: README.md
examples/solidity-template/: .env.example  README.md  hardhat.config.ts  package.json
examples/solidity-template/contracts/: Greeter.sol
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: lib.rs
modules/evm-bridge/: Cargo.toml
modules/evm-bridge/src/: lib.rs
modules/support/: Cargo.toml
modules/support/src/: evm.rs  lib.rs
modules/traits/: Cargo.toml
modules/traits/src/: lib.rs
node/bench/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/inspect/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/testing/: Cargo.toml
node/testing/src/: bench.rs  genesis.rs  keyring.rs
pallets/ethereum/: Cargo.toml
pallets/ethereum/src/: lib.rs
pallets/evm/: Cargo.toml
pallets/evm/precompile/dispatch/: Cargo.toml
pallets/evm/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: evm.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs  precompiles.rs
runtime/src/weights/: mod.rs
scripts/: prepare_testnet.sh
specs/: localnet.json  localnetRaw.json
ts-scripts/: package.json  test-claim-account-eip712.ts
