[package]
name = "module-evm-accounts"
version = "2.8.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"], optional = true }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }

orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.23", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }
module-evm-utility-macro = { path = "../evm-utility/macro" }
module-traits = { path = "../traits", default-features = false }
pallet-evm = { default-features = false, git = "https://github.com/sotatek-dev/frontier.git", branch = "polkadot-v0.9.23" }

# [dev-dependencies]
# pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
# orml-currencies = { path = "../../orml/currencies" }
# orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1",
	"libsecp256k1/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"orml-traits/std",
	"module-support/std",
]
runtime-benchmarks = [
	"libsecp256k1",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
