[package]
name = 'module-evm-bridge'
version = '2.8.0'
authors = []
edition = '2021'

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
log = { version = '0.4.14', default-features = false }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
serde = { version = '1.0', features = ['alloc', 'derive'], default-features = false }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
jsonrpc-core = { git = 'https://github.com/vmarkushin/jsonrpc.git', branch = 'no-std', package = 'jsonrpc-core', default-features = false }
ethereum = { version = '0.12', default-features = false, features = ['with-codec'] }
ethereum-types = { version = '0.13', default-features = false, features = ['rlp'] }
rlp = { version = '0.5', default-features = false }
rlp-derive = { version = '0.1.0', default-features = false }
hex = { version = '0.4', default-features = false, features = ['alloc'] }
lazy_static = { version = '1.4', default-features = false, features = ['spin_no_std'] }

frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
sp-core = { version = '6.0.0', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
sp-io = { version = '6.0.0', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
sp-keystore = { version = '0.12.0', git = 'https://github.com/paritytech/substrate', optional = true, branch = 'polkadot-v0.9.23' }
sp-runtime = { version = '6.0.0', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
sp-std = { version = '4.0.0', default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23' }
node-primitives = { path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-keystore',
	'sp-runtime/std',
	'sp-std/std',
	'log/std',
	'serde_json/std',
	'serde/std',
	'jsonrpc-core/std',
	'ethereum/std',
	'ethereum-types/std',
	'rlp/std',
	'hex/std',
]
